manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "craxcluster-f042"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "craxcluster-f042"
  template:
    metadata:
      labels:
        app: "craxcluster-f042"
    spec:
      containers:
        - name: "craxcluster-f042"
          image: "craxregistry.azurecr.io/craxcluster"
          ports:
          - containerPort: 3000
